--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,21 @@
-.container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    place-items: center;
-    gap: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap'); 
+ 
+ .container__title{
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    font-family: 'Lobster', cursive;
 
-}
+  }  
+  
+  .grid__container{
+    width: 90%;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: 1200px;
+    height: 100%;
+    display:flex;
+     margin: 0 auto;
+
+    
+    }  
